--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "chunchenxu/chunchenxu.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "/images/ccprofile.png"
+  avatar           : "profile.png"
   name             : "Chunchen Xu"
   pronouns         : # example: "she/her"  
   bio              : "Postdoctoral researcher"
@@ -34,7 +34,7 @@ author:
   # Academic websites
   academia         : # URL
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=Yukp8vYAAAAJ&hl=en"
   inspire-hep      : # URL
   impactstory      : # URL
   orcid            : #"http://orcid.org/yourorcidurl"
