--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : chunchen-xu-b460b160
+  linkedin         : # chunchen-xu-b460b160
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
