--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "chunchenxu/chunchenxu.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Chunchen Xu"
+  name             : "CHUNCHEN XU"
   pronouns         : # example: "she/her"  
   bio              : "Postdoctoral researcher"
   location         : # "California, U.S."
